--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jieun-portpolio</title>
+    <title>Zeron-portpolio</title>
     <meta
       name="description"
-      content="Portpolio for world-renowed software engineer jieun"
+      content="Portpolio for world-renowed software engineer Zeron"
     />
-    <meta name="author" content="jieun" />
-    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <meta name="author" content="Zeron" />
+    <link rel="icon" type="image/png" href="imgs/favicon.png" />
     <script
       src="https://kit.fontawesome.com/754821d1ff.js"
       crossorigin="anonymous"
@@ -23,8 +23,6 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <!-- font-family: 'Open Sans', sans-serif; -->
-
     <!-- Navbar -->
     <nav id="navbar">
       <div class="navbar__logo">
@@ -41,6 +39,19 @@
       </div>
       <div class="navbar__menu"></div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+      <img
+        src="imgs/profile.jpg"
+        alt="Zeron's profile photo"
+        class="home__avatar"
+      />
+      <h1 class="home__title">Hello,<br />I'm Dream Coder</h1>
+      <h2 class="home__description">
+        A Software Engineer who strives for a better today than yesterday
+      </h2>
+      <button class="home__contact">Contact me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
