--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Zeron-portpolio</title>
     <meta
       name="description"
-      content="Portpolio for world-renowed software engineer Zeron"
+      content="Portpolio for world-renowed front-end developer Zeron"
     />
     <meta name="author" content="Zeron" />
     <link rel="icon" type="image/png" href="imgs/favicon.png" />
@@ -27,7 +27,7 @@
     <nav id="navbar">
       <div class="navbar__logo">
         <i class="fas fa-user-astronaut"></i>
-        <a href="#">Jieun</a>
+        <a href="#">Zeron</a>
         <ul class="navbar__menu">
           <li class="navbar__menu__item">Home</li>
           <li class="navbar__menu__item">About</li>
@@ -48,12 +48,43 @@
       />
       <h1 class="home__title">Hello,<br />I'm Dream Coder</h1>
       <h2 class="home__description">
-        A Software Engineer who strives for a better today than yesterday
+        A Front-end Developer who strives for a better today than yesterday
       </h2>
       <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+      <h1>About me</h1>
+      <p>
+        I just started studying to become a front-end developer. There's so much
+        I still don't know. But I will try and make this page full.
+      </p>
+      <div class="about__majors">
+        <div class="major">
+          <div class="major__icon"><i class="fab fa-html5"></i></div>
+          <div class="major__title">HTML & CSS</div>
+          <div class="major__description">HTML, CSS</div>
+        </div>
+        <div class="major">
+          <div class="major__icon"><i class="fab fa-js-square"></i></div>
+          <div class="major__title">JavaScript</div>
+          <div class="major__description">JavaScript</div>
+        </div>
+        <div class="major">
+          <div class="major__icon"><i class="fab fa-react"></i></div>
+          <div class="major__title">React</div>
+          <div class="major__description">not yet</div>
+        </div>
+      </div>
+      <div class="about__school">
+        <div class="school">
+          <img src="imgs/logo-duksung.png" alt="duksung" class="school__logo" />
+          <div class="school__name">DUCKSUNG WOMEN'S UNIVERSITY</div>
+          <div class="school__major">Psychology</div>
+          <div class="school__period">2015 MAR - 2020 AUG</div>
+        </div>
+      </div>
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
