--- a/index.html
+++ b/index.html
@@ -86,7 +86,79 @@
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+      <h1>Skills</h1>
+      <h2>Skills & Attribute</h2>
+      <p>
+        Passion for learing new technologies. Capble of workong within a team
+        environment and independently. Ability to plan and time schedule, work
+        under strict time pressure and adapt quickly when needed.
+      </p>
+      <div class="skillset">
+        <div class="skillset__left">
+          <h3 class="skillset__title">Skills</h3>
+          <div class="skill">
+            <div class="skill__description">
+              <span>HTML</span>
+              <span>80%</span>
+            </div>
+            <div class="skill__var">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>CSS</span>
+              <span>80%</span>
+            </div>
+            <div class="skill__var">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>JAVASCRIPT</span>
+              <span>60%</span>
+            </div>
+            <div class="skill__var">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>JAVA</span>
+              <span>60%</span>
+            </div>
+            <div class="skill__var">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill__description">
+              <span>REACT</span>
+              <span>0%</span>
+            </div>
+            <div class="skill__var">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+        </div>
+        <div class="skillset__right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tools__list">
+              <li><span>Visual Studio Code</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span>Git</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
