--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Home -->
     <section id="home">
       <img
-        src="imgs/profile.jpg"
+        src="imgs/profile.png"
         alt="Zeron's profile photo"
         class="home__avatar"
       />
@@ -160,7 +160,34 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+      <h1>MY work</h1>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn">
+          All<span class="category__count"></span>1
+        </button>
+        <button class="category__btn">
+          Web page<span class="category__count">1</span>
+        </button>
+        <button class="category__btn">
+          React<span class="category__count">0</span>
+        </button>
+      </div>
+      <div class="work__projects">
+        <a href="#githubAdress" class="project" target="blank">
+          <img
+            src="imgs/projects/navbar.png"
+            alt="navbarProject"
+            class="project__img"
+          />
+          <div class="project__description">
+            <h3>Navbar</h3>
+            <span>Responsive header</span>
+          </div>
+        </a>
+      </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
