--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </button>
       </div>
       <div class="work__projects">
-        <a href="#githubAdress" class="project" target="blank">
+        <a href="#githubAdress" class="project" target="_blank">
           <img
             src="imgs/projects/navbar.png"
             alt="navbarProject"
@@ -188,9 +188,18 @@
         </a>
       </div>
     </section>
-    <!-- Testimonials -->
-    <section id="testimonials"></section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1 class="contact__title">Let's talk</h1>
+      <h2 class="contact__email">mang9643@gamil.com</h2>
+      <div class="contact__links">
+        <a href="https://github.com/zeron52" target="_blank"
+          ><i class="fab fa-github-square"></i
+        ></a>
+      </div>
+      <p class="contack__rights">
+        2021 Dream Coding Zeron - All rights reserved
+      </p>
+    </section>
   </body>
 </html>
