--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
       <h1>About me</h1>
       <p>
         I just started studying to become a front-end developer. There's so much
@@ -61,31 +61,33 @@
       <div class="about__majors">
         <div class="major">
           <div class="major__icon"><i class="fab fa-html5"></i></div>
-          <div class="major__title">HTML & CSS</div>
+          <h2 class="major__title">HTML & CSS</h2>
           <div class="major__description">HTML, CSS</div>
         </div>
         <div class="major">
           <div class="major__icon"><i class="fab fa-js-square"></i></div>
-          <div class="major__title">JavaScript</div>
+          <h2 class="major__title">JavaScript</h2>
           <div class="major__description">JavaScript</div>
         </div>
         <div class="major">
           <div class="major__icon"><i class="fab fa-react"></i></div>
-          <div class="major__title">React</div>
+          <h2 class="major__title">React</h2>
           <div class="major__description">not yet</div>
         </div>
       </div>
       <div class="about__school">
         <div class="school">
           <img src="imgs/logo-duksung.png" alt="duksung" class="school__logo" />
-          <div class="school__name">DUCKSUNG WOMEN'S UNIVERSITY</div>
-          <div class="school__major">Psychology</div>
-          <div class="school__period">2015 MAR - 2020 AUG</div>
+          <div class="school__description">
+            <div class="school__name">DUCKSUNG WOMEN'S UNIVERSITY</div>
+            <div class="school__major">Psychology</div>
+            <div class="school__period">2015 MAR - 2020 AUG</div>
+          </div>
         </div>
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
       <h1>Skills</h1>
       <h2>Skills & Attribute</h2>
       <p>
@@ -159,7 +161,7 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
       <h1>MY work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
@@ -188,7 +190,7 @@
       </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
       <h1 class="contact__title">Let's talk</h1>
       <h2 class="contact__email">mang9643@gamil.com</h2>
       <div class="contact__links">
