--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <button class="home__contact">Contact me</button>
     </section>
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
       <h1>About me</h1>
       <p>
         I just started studying to become a front-end developer. There's so much
@@ -88,74 +88,76 @@
     </section>
     <!-- Skills -->
     <section id="skills" class="section">
-      <h1>Skills</h1>
-      <h2>Skills & Attribute</h2>
-      <p>
-        Passion for learing new technologies. Capble of workong within a team
-        environment and independently. Ability to plan and time schedule, work
-        under strict time pressure and adapt quickly when needed.
-      </p>
-      <div class="skillset">
-        <div class="skillset__left">
-          <h3 class="skillset__title">Skills</h3>
-          <div class="skill">
-            <div class="skill__description">
-              <span>HTML</span>
-              <span>80%</span>
+      <div class="section__container">
+        <h1>Skills</h1>
+        <h2>Skills & Attribute</h2>
+        <p>
+          Passion for learing new technologies. Capble of workong within a team
+          environment and independently. Ability to plan and time schedule, work
+          under strict time pressure and adapt quickly when needed.
+        </p>
+        <div class="skillset">
+          <div class="skillset__left">
+            <h3 class="skillset__title">Skills</h3>
+            <div class="skill">
+              <div class="skill__description">
+                <span>HTML</span>
+                <span>80%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 80%"></div>
+              </div>
             </div>
-            <div class="skill__var">
-              <div class="skill__value"></div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>80%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 80%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>JAVASCRIPT</span>
+                <span>60%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 60%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>JAVA</span>
+                <span>60%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 60%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>REACT</span>
+                <span>0%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 0%"></div>
+              </div>
             </div>
           </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>CSS</span>
-              <span>80%</span>
+          <div class="skillset__right">
+            <div class="tools">
+              <h3 class="skillset__title">Tools</h3>
+              <ul class="tools__list">
+                <li><span>Visual Studio Code</span></li>
+              </ul>
             </div>
-            <div class="skill__var">
-              <div class="skill__value"></div>
+            <div class="etc">
+              <h3 class="skillset__title">Etc</h3>
+              <ul class="etc__list">
+                <li><span>Git</span></li>
+              </ul>
             </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>JAVASCRIPT</span>
-              <span>60%</span>
-            </div>
-            <div class="skill__var">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>JAVA</span>
-              <span>60%</span>
-            </div>
-            <div class="skill__var">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>REACT</span>
-              <span>0%</span>
-            </div>
-            <div class="skill__var">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-        </div>
-        <div class="skillset__right">
-          <div class="tools">
-            <h3 class="skillset__title">Tools</h3>
-            <ul class="tools__list">
-              <li><span>Visual Studio Code</span></li>
-            </ul>
-          </div>
-          <div class="etc">
-            <h3 class="skillset__title">Etc</h3>
-            <ul class="etc__list">
-              <li><span>Git</span></li>
-            </ul>
           </div>
         </div>
       </div>
