--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
       <h1>MY work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn">
-          All<span class="category__count"></span>1
+        <button class="category__btn active">
+          All<span class="category__count">1</span>
         </button>
         <button class="category__btn">
           Web page<span class="category__count">1</span>
