--- a/index.html
+++ b/index.html
@@ -164,31 +164,33 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-      <h1>MY work</h1>
-      <h3>Projects</h3>
-      <div class="work__categories">
-        <button class="category__btn active">
-          All<span class="category__count">1</span>
-        </button>
-        <button class="category__btn">
-          Web page<span class="category__count">1</span>
-        </button>
-        <button class="category__btn">
-          React<span class="category__count">0</span>
-        </button>
-      </div>
-      <div class="work__projects">
-        <a href="#githubAdress" class="project" target="_blank">
-          <img
-            src="imgs/projects/navbar.png"
-            alt="navbarProject"
-            class="project__img"
-          />
-          <div class="project__description">
-            <h3>Navbar</h3>
-            <span>Responsive header</span>
-          </div>
-        </a>
+      <div class="section__container">
+        <h1>MY work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+          <button class="category__btn active">
+            All<span class="category__count">1</span>
+          </button>
+          <button class="category__btn">
+            Web page<span class="category__count">1</span>
+          </button>
+          <button class="category__btn">
+            React<span class="category__count">0</span>
+          </button>
+        </div>
+        <div class="work__projects">
+          <a href="#githubAdress" class="project" target="_blank">
+            <img
+              src="imgs/projects/navbar.png"
+              alt="navbarProject"
+              class="project__img"
+            />
+            <div class="project__description">
+              <h3>Navbar</h3>
+              <span>Responsive header</span>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
     <!-- Contact -->
