--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         <li class="navbar__menu__item">Testimonials</li>
         <li class="navbar__menu__item">Contact</li>
       </ul>
+
+      <!-- Toggle button -->
+      <button class="navbar__toggle-btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
+
     <!-- Home -->
     <section id="home">
       <img
@@ -51,6 +57,7 @@
       </h2>
       <button class="home__contact">Contact me</button>
     </section>
+
     <!-- About -->
     <section id="about" class="section section__container">
       <h1>About me</h1>
@@ -86,6 +93,7 @@
         </div>
       </div>
     </section>
+
     <!-- Skills -->
     <section id="skills" class="section">
       <div class="section__container">
@@ -162,6 +170,7 @@
         </div>
       </div>
     </section>
+
     <!-- Work -->
     <section id="work" class="section">
       <div class="section__container">
@@ -193,6 +202,7 @@
         </div>
       </div>
     </section>
+
     <!-- Contact -->
     <section id="contact" class="section">
       <h1 class="contact__title">Let's talk</h1>
